--- a/3D_plot.ipynb
+++ b/3D_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4753,6 +4753,10 @@
           ]
          },
          "xaxis": {
+          "range": [
+           250,
+           400
+          ],
           "title": {
            "text": "X2"
           }
@@ -5583,6 +5587,9 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Левый глаз"
         }
        }
       }
@@ -11168,6 +11175,9 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Правый глаз"
         }
        }
       }
@@ -11211,8 +11221,12 @@
     "\n",
     "df_pca_3 = pd.DataFrame(coordinates_arr,columns = ['Time','X','Y','X2','Y2'])\n",
     "fig = px.scatter_3d(df_pca_3, x = 'X2', y = 'Y2' , z = 'Time').update_traces(marker = dict(size = 2,color = \"#C00000\"))\n",
+    "# Задаем заголовок графика\n",
+    "fig.update_layout(title='Левый глаз')\n",
+    "fig.update_layout(scene=dict(xaxis=dict(range=[250, 400])))\n",
     "fig.show()\n",
     "fig = px.scatter_3d(df_pca_3, x = 'X', y = 'Y', z = 'Time').update_traces(marker = dict(size = 2,color = \"#C00000\"))\n",
+    "fig.update_layout(title='Правый глаз')\n",
     "fig.show()\n",
     "\n",
     "# освободить ресурсы\n",
